// Vitest Snapshot v1

exports[`Breadcrumb > should render item 1`] = `
"<div data-v-3e997d90=\\"\\" class=\\"breadcrumb\\">
  <div data-v-3e997d90=\\"\\" class=\\"content\\">
    <icon-stub data-v-3e997d90=\\"\\" name=\\"g\\"></icon-stub><span data-v-3e997d90=\\"\\" class=\\"name\\">g</span>
  </div>
</div>"
`;

exports[`Breadcrumb > should render router-link for link 1`] = `
"<div data-v-3e997d90=\\"\\" class=\\"breadcrumb\\">
  <router-link data-v-3e997d90=\\"\\" to=\\"/g\\" class=\\"content has-link\\">
    <icon-stub data-v-3e997d90=\\"\\" name=\\"g\\"></icon-stub><span data-v-3e997d90=\\"\\" class=\\"name\\">g</span>
  </router-link>
</div>"
`;
